added google fonts in variables.scss and updated itn in link.html

--- a/themes/LoveIt/layouts/partials/head/link.html
+++ b/themes/LoveIt/layouts/partials/head/link.html
@@ -15,8 +15,8 @@
     {{- end -}}
     <link rel="manifest" href="/site.webmanifest">
 {{- end -}}
-
-<link rel="canonical" href="{{ .Permalink }}" />
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 {{- if .PrevInSection -}}
     <link rel="prev" href="{{ .PrevInSection.Permalink }}" />
 {{- end -}}
