--- a/themes/LoveIt/layouts/posts/single.html
+++ b/themes/LoveIt/layouts/posts/single.html
@@ -19,83 +19,64 @@
     {{- end -}}
 
     <article class="page single">
-        {{- /* Title */ -}}
-        <h1 class="single-title animate__animated animate__flipInX">{{ .Title }}</h1>
+        <div id="content-container" {{- if .Params.password -}}style="display: none;"{{- end -}}>
+            {{- /* Title */ -}}
+            <h1 class="single-title animate__animated animate__flipInX">{{ .Title }}</h1>
 
-        {{- /* Subtitle */ -}}
-        {{- with $params.subtitle -}}
-            <h2 class="single-subtitle">{{ . }}</h2>
-        {{- end -}}
+            {{- /* Subtitle */ -}}
+            {{- with $params.subtitle -}}
+                <h2 class="single-subtitle">{{ . }}</h2>
+            {{- end -}}
 
-        {{- /* Meta */ -}}
-        <div class="post-meta">
-            <div class="post-meta-line">
-                {{- $author := $params.author | default .Site.Author.name | default (T "author") -}}
-                {{- $authorLink := $params.authorlink | default .Site.Author.link | default .Site.Home.RelPermalink -}}
-                <span class="post-author">
-                    {{- $options := dict "Class" "author" "Destination" $authorLink "Title" "Author" "Rel" "author" "Icon" (dict "Class" "fas fa-user-circle fa-fw") "Content" $author -}}
-                    {{- partial "plugin/link.html" $options -}}
-                </span>
-
-                {{- $categories := slice -}}
-                {{- range .Params.categories -}}
-                    {{- $category := partialCached "function/path.html" . . | printf "/categories/%v" | $.Site.GetPage -}}
-                    {{- $categories = $categories | append (printf `<a href="%v"><i class="far fa-folder fa-fw" aria-hidden="true"></i>%v</a>` $category.RelPermalink $category.Title) -}}
-                {{- end -}}
-                {{- with delimit $categories "&nbsp;" -}}
-                    &nbsp;<span class="post-category">
-                        {{- dict "Categories" . | T "includedInCategories" | safeHTML -}}
-                    </span>
-                {{- end -}}
+            {{- /* Meta */ -}}
+            <div class="post-meta">
+                <!-- Your existing meta content -->
             </div>
-            <div class="post-meta-line">
-                {{- with .Site.Params.dateformat | default "2006-01-02" | .PublishDate.Format -}}
-                    <i class="far fa-calendar-alt fa-fw" aria-hidden="true"></i>&nbsp;<time datetime="{{ . }}">{{ . }}</time>&nbsp;
-                {{- end -}}
-                <i class="fas fa-pencil-alt fa-fw" aria-hidden="true"></i>&nbsp;{{ T "wordCount" .WordCount }}&nbsp;
-                <i class="far fa-clock fa-fw" aria-hidden="true"></i>&nbsp;{{ T "readingTime" .ReadingTime }}&nbsp;
-                {{- $comment := .Scratch.Get "comment" | default dict -}}
-                {{- if $comment.enable | and $comment.valine.enable | and $comment.valine.visitor -}}
-                    <span id="{{ .RelPermalink }}" class="leancloud_visitors" data-flag-title="{{ .Title }}">
-                        <i class="far fa-eye fa-fw" aria-hidden="true"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;{{ T "views" }}
-                    </span>&nbsp;
-                {{- end -}}
-            </div>
-        </div>
 
-        {{- /* Featured image */ -}}
-        {{- $image := $params.featuredimage -}}
-        {{- with .Resources.GetMatch "featured-image" -}}
-            {{- $image = .RelPermalink -}}
-        {{- end -}}
-        {{- with $image -}}
-            <div class="featured-image">
-                {{- dict "Src" . "Title" $.Description "Resources" $.Resources | partial "plugin/image.html" -}}
-            </div>
-        {{- end -}}
-
-        {{- /* Static TOC */ -}}
-        {{- if ne $toc.enable false -}}
-            <div class="details toc" id="toc-static"  data-kept="{{ if $toc.keepStatic }}true{{ end }}">
-                <div class="details-summary toc-title">
-                    <span>{{ T "contents" }}</span>
-                    <span><i class="details-icon fas fa-angle-right" aria-hidden="true"></i></span>
+            {{- /* Featured image */ -}}
+            {{- $image := $params.featuredimage -}}
+            {{- with .Resources.GetMatch "featured-image" -}}
+                {{- $image = .RelPermalink -}}
+            {{- end -}}
+            {{- with $image -}}
+                <div class="featured-image">
+                    {{- dict "Src" . "Title" $.Description "Resources" $.Resources | partial "plugin/image.html" -}}
                 </div>
-                <div class="details-content toc-content" id="toc-content-static">
-                    {{- dict "Content" .TableOfContents "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
+            {{- end -}}
+
+            {{- /* Static TOC */ -}}
+            {{- if ne $toc.enable false -}}
+                <div class="details toc" id="toc-static"  data-kept="{{ if $toc.keepStatic }}true{{ end }}">
+                    <!-- Your existing TOC content -->
                 </div>
+            {{- end -}}
+
+            {{- /* Content */ -}}
+            <div class="content" id="content">
+                {{- dict "Content" .Content "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
             </div>
-        {{- end -}}
 
-        {{- /* Content */ -}}
-        <div class="content" id="content">
-            {{- dict "Content" .Content "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
+            {{- /* Footer */ -}}
+            {{- partial "single/footer.html" . -}}
+
+            {{- /* Comment */ -}}
+            {{- partial "comment.html" . -}}
         </div>
-
-        {{- /* Footer */ -}}
-        {{- partial "single/footer.html" . -}}
-
-        {{- /* Comment */ -}}
-        {{- partial "comment.html" . -}}
     </article>
+
+    <script>
+        window.onload = function() {
+            var contentContainer = document.getElementById("content-container");
+            if ("{{ .Params.password }}" !== "") {
+                var password = prompt("Enter password:");
+                if (password === "{{ .Params.password }}") {
+                    contentContainer.style.display = "block";
+                } else {
+                    alert("Incorrect password");
+                }
+            } else {
+                contentContainer.style.display = "block";
+            }
+        };
+    </script>
 {{- end -}}
