--- a/themes/LoveIt/layouts/posts/single.html
+++ b/themes/LoveIt/layouts/posts/single.html
@@ -30,7 +30,38 @@
 
             {{- /* Meta */ -}}
             <div class="post-meta">
-                <!-- Your existing meta content -->
+                <div class="post-meta-line">
+                    {{- $author := $params.author | default .Site.Author.name | default (T "author") -}}
+                    {{- $authorLink := $params.authorlink | default .Site.Author.link | default .Site.Home.RelPermalink -}}
+                    <span class="post-author">
+                        {{- $options := dict "Class" "author" "Destination" $authorLink "Title" "Author" "Rel" "author" "Icon" (dict "Class" "fas fa-user-circle fa-fw") "Content" $author -}}
+                        {{- partial "plugin/link.html" $options -}}
+                    </span>
+    
+                    {{- $categories := slice -}}
+                    {{- range .Params.categories -}}
+                        {{- $category := partialCached "function/path.html" . . | printf "/categories/%v" | $.Site.GetPage -}}
+                        {{- $categories = $categories | append (printf `<a href="%v"><i class="far fa-folder fa-fw" aria-hidden="true"></i>%v</a>` $category.RelPermalink $category.Title) -}}
+                    {{- end -}}
+                    {{- with delimit $categories "&nbsp;" -}}
+                        &nbsp;<span class="post-category">
+                            {{- dict "Categories" . | T "includedInCategories" | safeHTML -}}
+                        </span>
+                    {{- end -}}
+                </div>
+                <div class="post-meta-line">
+                    {{- with .Site.Params.dateformat | default "2006-01-02" | .PublishDate.Format -}}
+                        <i class="far fa-calendar-alt fa-fw" aria-hidden="true"></i>&nbsp;<time datetime="{{ . }}">{{ . }}</time>&nbsp;
+                    {{- end -}}
+                    <i class="fas fa-pencil-alt fa-fw" aria-hidden="true"></i>&nbsp;{{ T "wordCount" .WordCount }}&nbsp;
+                    <i class="far fa-clock fa-fw" aria-hidden="true"></i>&nbsp;{{ T "readingTime" .ReadingTime }}&nbsp;
+                    {{- $comment := .Scratch.Get "comment" | default dict -}}
+                    {{- if $comment.enable | and $comment.valine.enable | and $comment.valine.visitor -}}
+                        <span id="{{ .RelPermalink }}" class="leancloud_visitors" data-flag-title="{{ .Title }}">
+                            <i class="far fa-eye fa-fw" aria-hidden="true"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;{{ T "views" }}
+                        </span>&nbsp;
+                    {{- end -}}
+                </div>
             </div>
 
             {{- /* Featured image */ -}}
@@ -47,7 +78,13 @@
             {{- /* Static TOC */ -}}
             {{- if ne $toc.enable false -}}
                 <div class="details toc" id="toc-static"  data-kept="{{ if $toc.keepStatic }}true{{ end }}">
-                    <!-- Your existing TOC content -->
+                    <div class="details-summary toc-title">
+                        <span>{{ T "contents" }}</span>
+                        <span><i class="details-icon fas fa-angle-right" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="details-content toc-content" id="toc-content-static">
+                        {{- dict "Content" .TableOfContents "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
+                    </div>
                 </div>
             {{- end -}}
 
