--- a/themes/LoveIt/layouts/partials/head/seo.html
+++ b/themes/LoveIt/layouts/partials/head/seo.html
@@ -29,7 +29,7 @@
         {{- with .Site.Params.Author.name -}}
             "author": {
                 "@type": "Person",
-                "name": {{ . | safeHTML }}
+                "name": "Shiva"
             },
         {{- end -}}
         {{- with .Site.Params.description -}}
@@ -122,7 +122,7 @@
         {{- with .Site.Copyright -}}
             "license": {{ . | safeHTML }},
         {{- end -}}
-        {{- $publisher := .Params.author | default .Site.Params.Author.name | default (T "author") | dict "name" -}}
+        {{- $publisher := .Params.author | default .Site.Params.Author.name | default "Shiva" | dict "name" -}}
         {{- $publisher = $params.seo.publisher | default dict | merge $publisher -}}
         "publisher": {
             "@type": "Organization",
@@ -141,10 +141,10 @@
                 {{- end -}}
             {{- end -}}
         },
-        {{- with .Params.author | default .Site.Params.Author.name | default (T "author") -}}
+        {{- with .Params.author | default .Site.Params.Author.name | default "Shiva" -}}
             "author": {
                 "@type": "Person",
-                "name": {{ . | safeHTML }}
+                "name": "Shiva"
             },
         {{- end -}}
         "description": {{ .Description | safeHTML }}
