--- a/themes/LoveIt/assets/css/_page/_home.scss
+++ b/themes/LoveIt/assets/css/_page/_home.scss
@@ -140,7 +140,7 @@
       p {
         font-size: 1rem;
         line-height: 1.5;
-        display: inline;
+        //display: inline;
 
         &::after {
           content: "\A";
