--- a/themes/LoveIt/assets/css/_variables.scss
+++ b/themes/LoveIt/assets/css/_variables.scss
@@ -4,17 +4,17 @@
 
 // ========== Global ========== //
 // Font and Line Height
-$global-font-family: 'Raleway', system-ui, -apple-system, BlinkMacSystemFont, PingFang SC, Microsoft YaHei UI, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !default;
+$global-font-family: system-ui, -apple-system, Segoe UI, Ubuntu, 'Open Sans', BlinkMacSystemFont, PingFang SC, Microsoft YaHei UI, Roboto, Oxygen, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif !default;
 $global-font-size: 16px;
-$global-font-weight: 450;
-$global-line-height: 1.5rem;
+$global-font-weight: 400;
+$global-line-height: 1.2rem;
 
 // Color of the background
 $global-background-color: #fff !default;
 $global-background-color-dark: #292a2d !default;
 
 // Color of the text
-$global-font-color: #161209 !default;
+$global-font-color: #333333 !default;
 $global-font-color-dark: #a9a9b3 !default;
 
 // Color of the secondary text
@@ -32,6 +32,11 @@ $global-link-hover-color-dark: #fff !default;
 // Color of the border
 $global-border-color: #f0f0f0 !default;
 $global-border-color-dark: #363636 !default;
+
+// Heading styles
+$global-heading-font-size: 2rem !default; // Adjusted for headings
+$global-heading-font-weight: 400 !default; // Bold for headings
+$global-heading-color: #000000 !default; // Black for headings
 // ========== Global ========== //
 
 // ========== Scrollbar ========== //
