--- a/themes/LoveIt/layouts/_default/summary.html
+++ b/themes/LoveIt/layouts/_default/summary.html
@@ -51,11 +51,11 @@
 
     {{- /* Summary content */ -}}
     <div class="content">
-        {{- with .Summary -}}
-            {{- dict "Content" . "Ruby" $params.ruby "Fraction" $params.fraction "Fontawesome" $params.fontawesome | partial "function/content.html" | safeHTML -}}
-        {{- else -}}
-            {{- .Description | safeHTML -}}
+        {{- /* Display description from front matter if available */ -}}
+        {{- with .Params.description -}}
+            <p>{{ . | safeHTML }}</p> {{/* Display the description */}}
         {{- end -}}
+        {{- /* Removed the original summary rendering logic */ -}}
     </div>
 
     {{- /* Footer */ -}}
