--- a/themes/LoveIt/assets/css/_partial/_header.scss
+++ b/themes/LoveIt/assets/css/_partial/_header.scss
@@ -151,6 +151,8 @@ header {
   position: fixed;
   height: $header-height;
   line-height: $header-height;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add a subtle shadow below the header */
+  background-color: #f8f8f8; /* Light gray for light theme */
 
   [data-header-desktop=normal] & {
     position: static;
