--- a/themes/LoveIt/layouts/partials/header.html
+++ b/themes/LoveIt/layouts/partials/header.html
@@ -1,3 +1,6 @@
+{{- /* Determine multilingual support without deprecated properties */ -}}
+{{- $isMultilingual := or (gt (len .Sites) 1) (gt (len .AllTranslations) 0) -}}
+
 {{- /* Desktop header */ -}}
 <header class="desktop" id="header-desktop">
     <div class="header-wrapper">
@@ -39,7 +42,7 @@
                 {{- if .Site.Menus.main -}}
                     <span class="menu-item delimiter"></span>
                 {{- end -}}
-                {{- if hugo.IsMultilingual -}}
+                {{- if $isMultilingual -}}
                     <a href="javascript:void(0);" class="menu-item language" title="{{ T "selectLanguage" }}">
                         {{- .Language.LanguageName -}}
                         <i class="fas fa-chevron-right fa-fw" aria-hidden="true"></i>
@@ -149,7 +152,7 @@
             <a href="javascript:void(0);" class="menu-item theme-switch" title="{{ T "switchTheme" }}">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a>
-            {{- if hugo.IsMultilingual -}}
+            {{- if $isMultilingual -}}
                 <a href="javascript:void(0);" class="menu-item" title="{{ T "selectLanguage" }}">
                     {{- .Language.LanguageName -}}
                     <i class="fas fa-chevron-right fa-fw" aria-hidden="true"></i>
